<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/bottom_navigation_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_category_24"
        android:title="@string/bottom_navigation_category" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/bottom_navigation_search" />
    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_none_24"
        android:title="@string/bottom_navigation_notification" />

    <item
        android:id="@+id/navigation_my_page"
        android:icon="@drawable/ic_person_outline_24"
        android:title="@string/bottom_navigation_my_page" />
</menu>